# ascon80pq-go-binding

./: .gitmodules  README.md  ascon80pq.h  test.go
bench/: CMakeLists.txt  bench.c  bench.go
